--- a/Frame/Layout/3_Content/cBooks/bookmob.html
+++ b/Frame/Layout/3_Content/cBooks/bookmob.html
@@ -23,7 +23,7 @@
                 <section aria-label="88-DL" class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
                     <div class="panel">
                         <div class="panel-body">
-                        <h2>88 Precepts</h2>
+                        <h2>&nbsp;</h2>
                             <span class="img-responsive center-block bookm bm-88">&nbsp;</span><br>
                             <div class="btn-1 center-block">
                                 <a class="btn-readmore button" style="center" target="popup" onclick="window.open('../../../../../../Import/DL/Books/88_Precepts-David_Lane.pdf','popup'); return false;"><span>Online/DL</span></a>
@@ -32,7 +32,7 @@
                 <section class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
                     <div class="panel">
                         <div class="panel-body">
-                           <h2>Central Banking</h2>
+                           <h2>&nbsp;</h2>
                            <span class="img-responsive center-block bookm bm-CBE">&nbsp;</span><br>
                             <div class="btn-1 center-block">
                                 <a class="btn-readmore button" style="center" target="popup" onclick="window.open('../../../../../../Import/DL/Books/A_History_of_Central_Banking.pdf','popup'); return false;"><span>Online/DL</span></a>
@@ -41,7 +41,7 @@
                 <section aria-label="ATR-DL" class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
                     <div class="panel">
                         <div class="panel-body">
-                            <h2>Anti-Tech Revolution</h2>
+                            <h2>&nbsp;</h2>
                             <span class="img-responsive  center-block bookm bm-ATR">&nbsp;</span><br>  
                             <div class="btn-1 center-block">
                                 <a class="btn-readmore button" style="center" target="popup" onclick="window.open('../../../../../../Import/DL/Books/Kaczynski_Anti-Tech_Rev_WH.pdf','popup'); return false;"><span>Online/DL</span></a>
@@ -50,7 +50,7 @@
                 <section aria-label="CNT-DL" class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
                     <div class="panel">
                         <div class="panel-body">
-                            <h2>Christogenea</h2>
+                            <h2>&nbsp;</h2>
                             <span class="img-responsive  center-block bookm bm-CHR">&nbsp;</span><br>  
                             <div class="btn-1 center-block">
                                 <a class="btn-readmore button" style="center" target="popup" onclick="window.open('https://christogenea.org/CNT/contents','popup'); return false;"><span>Online/DL</span></a>
@@ -59,7 +59,7 @@
                 <section aria-label="CC-DL" class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
                     <div class="panel">
                         <div class="panel-body">
-                            <h2>Culture Critique</h2> 
+                            <h2>&nbsp;</h2> 
                             <span class="img-responsive center-block bookm bm-COC">&nbsp;</span><br>
                             <div class="btn-1 center-block">
                                 <a class="btn-readmore button" style="center" target="popup" onclick="window.open('../../../../../../Import/DL/Books/The_Culture_Critique.pdf','popup'); return false;"><span>Online/DL</span></a>
@@ -68,7 +68,7 @@
                 <section aria-label="FA-DL"class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
                     <div class="panel">
                         <div aria-label="FA-DL" class="panel-body">
-                            <h2>Faith Action</h2> 
+                            <h2>&nbsp;</h2> 
                             <span class="img-responsive center-block bookm bm-FA">&nbsp;</span><br> 
                             <div class="btn-1 center-block">
                                 <a class="btn-readmore button" style="center" target="popup" onclick="window.open('../../../../../../Import/DL/Books/Faith_and_Action.pdf','popup'); return false;"><span>Online/DL</span></a>
@@ -77,7 +77,7 @@
                 <section aria-label="FD-DL" class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
                     <div class="panel">
                         <div class="panel-body">
-                            <h2>Fascist Duties</h2> 
+                            <h2>&nbsp;</h2> 
                             <span class="img-responsive center-block bookm bm-FESD">&nbsp;</span><br> 
                             <div class="btn-1 center-block">
                                 <a class="btn-readmore button" style="center" target="popup" onclick="window.open('../../../../../../Import/DL/Books/Fascist_Economics_Socialism_of_Duty.pdf','popup'); return false;"><span>Online/DL</span></a>
@@ -86,7 +86,7 @@
                 <section aria-label="FML-DL" class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
                     <div class="panel">
                         <div class="panel-body">
-                            <h2>For Legionaries</h2> 
+                            <h2>&nbsp;</h2> 
                             <span class="img-responsive  center-block bookm bm-FML">&nbsp;</span><br> 
                             <div class="btn-1 center-block">
                                 <a class="btn-readmore button" style="center" target="popup" onclick="window.open('../../../../../../Import/DL/Books/Corneliu_Codreanu-For_My_Legionaries.pdf','popup'); return false;"><span>Online/DL</span></a>
@@ -95,7 +95,7 @@
                 <section aria-label="HS-DL" class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
                     <div class="panel">
                         <div class="panel-body">
-                            <h2>Hell Storm</h2>
+                            <h2>&nbsp;</h2>
                             <span class="img-responsive  center-block bookm bm-HS">&nbsp;</span><br> 
                             <div class="btn-1 center-block">
                                 <a class="btn-readmore button" style="center" target="popup" onclick="window.open('../../../../../../Import/DL/Books/Hellstorm-Thomas_Goodrich.pdf','popup'); return false;"><span>Online/DL</span></a>
@@ -104,7 +104,7 @@
                 <section aria-label="TIJ-DL" class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
                     <div class="panel">
                         <div class="panel-body">
-                            <h2>International Jew</h2>
+                            <h2>&nbsp;</h2>
                             <span class="img-responsive  center-block bookm bm-IJ">&nbsp;</span><br>
                             <div class="btn-1 center-block"> 
                                 <a class="btn-readmore button" style="center" target="popup" onclick="window.open('../../../../../../Import/DL/Books/HenryFord-International_Jew.pdf','popup'); return false;"><span>Online/DL</span></a>
@@ -113,7 +113,7 @@
                 <section aria-label="JRS-DL" class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
                     <div class="panel">
                         <div class="panel-body">
-                            <h2>Jew Revo Spirit</h2> 
+                            <h2>&nbsp;</h2> 
                             <span class="img-responsive center-block bookm bm-TJRS">&nbsp;</span><br> 
                             <div class="btn-1 center-block">
                                 <a class="btn-readmore button" style="center" target="popup" onclick="window.open('../../../../../../Import/DL/Books/Jones_Jew_Rev_Spirit.pdf','popup'); return false;"><span>Online/DL</span></a>
@@ -122,7 +122,7 @@
                 <section aria-label="MK-DL" class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
                     <div class="panel">
                         <div class="panel-body">
-                            <h2>Mein Kampf</h2> 
+                            <h2>&nbsp;</h2> 
                             <span class="img-responsive center-block bookm bm-MK">&nbsp;</span><br>
                             <div class="btn-1 center-block">
                                 <a class="btn-readmore button" style="center" target="popup" onclick="window.open('../../../../../../Import/DL/Books/Mein_Kampf_Dalton.pdf','popup'); return false;"><span>Online/DL</span></a>
@@ -131,7 +131,7 @@
                 <section aria-label="WMP-DL" class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
                     <div class="panel">
                         <div class="panel-body">
-                            <h2>War Meta Pysics</h2> 
+                            <h2>&nbsp;</h2> 
                             <span class="img-responsive center-block bookm bm-MPOW">&nbsp;</span><br> 
                             <div class="btn-1 center-block">
                                 <a class="btn-readmore button" style="center" target="popup" onclick="window.open('../../../../../../Import/DL/Books/The_Metaphysics_of_War.pdf','popup'); return false;"><span>Online/DL</span></a>
@@ -140,7 +140,7 @@
                 <section aria-label="NSB-DL" class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
                     <div class="panel">
                         <div class="panel-body">
-                            <h2>NatSoc Biology</h2> 
+                            <h2>&nbsp;</h2> 
                             <span class="img-responsive  center-block bookm bookm bm-NSB">&nbsp;</span><br>
                             <div class="btn-1 center-block">
                                 <a class="btn-readmore button" style="center" target="popup" onclick="window.open('../../../../../../Import/DL/Books/A_Biological_Worldview.pdf','popup'); return false;"><span>Online/DL</span></a>
@@ -149,7 +149,7 @@
                 <section aria-label="JMS-DL" class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
                     <div class="panel">
                         <div class="panel-body">
-                            <h2>Siege</h2> 
+                            <h2>&nbsp;</h2> 
                             <span class="img-responsive  center-block bookm bm-JMS">&nbsp;</span><br> 
                             <div class="btn-1 center-block">
                                 <a class="btn-readmore button" style="center" target="popup" onclick="window.open('../../../../../../Import/DL/Books/Siege-James_Mason.pdf','popup'); return false;"><span>Online/DL</span></a>
@@ -158,7 +158,7 @@
                 <section aria-label="TTW-DL" class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
                     <div class="panel">
                         <div class="panel-body">
-                            <h2>This Time World</h2> 
+                            <h2>&nbsp;</h2> 
                             <span class="img-responsive  center-block bookm bm-TTTW">&nbsp;</span><br> 
                             <div class="btn-1 center-block">
                                 <a class="btn-readmore button" style="center" target="popup" onclick="window.open('../../../../../../Import/DL/Books/This_Time_The_World-Rockwell.pdf','popup'); return false;"><span>Online/DL</span></a>
@@ -167,7 +167,7 @@
                 <section aria-label="TEL-DL" class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
                     <div class="panel">
                         <div class="panel-body">
-                            <h2>Tomorrow We Live</h2> 
+                            <h2>&nbsp;</h2> 
                             <span class="img-responsive center-block bookm bm-TWL">&nbsp;</span><br> 
                             <div class="btn-1 center-block">
                                 <a class="btn-readmore button" style="center" target="popup" onclick="window.open('../../../../../../Import/DL/Books/Mosley-Tomorrow_We_Live.pdf','popup'); return false;"><span>Online/DL</span></a>
@@ -176,7 +176,7 @@
                 <section aria-label="TTD-DL" class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
                     <div class="panel">
                         <div class="panel-body">
-                            <h2>Turner Diaries</h2> 
+                            <h2>&nbsp;</h2> 
                             <span class="img-responsive center-block bookm bm-TTD">&nbsp;</span><br>
                             <div class="btn-1 center-block"> 
                                 <a class="btn-readmore button" style="center" target="popup" onclick="window.open('../../../../../../Import/DL/Books/Turner_Diaries.pdf','popup'); return false;"><span>Online/DL</span></a>
@@ -185,7 +185,7 @@
                 <section aria-label="WWWM-DL" class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
                     <div class="panel">
                         <div class="panel-body">
-                            <h2>Which Way WMan</h2> 
+                            <h2>&nbsp;</h2> 
                             <span class="img-responsive center-block bookm bm-WWWM">&nbsp;</span><br> 
                             <div class="btn-1 center-block">
                                 <a class="btn-readmore button" style="center" target="popup" onclick="window.open('../../../../../../Import/DL/Books/Which_Way_Western_Man.pdf','popup'); return false;"><span>Online/DL</span></a>
@@ -194,7 +194,7 @@
                 <section aria-label="WP-DL" class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
                     <div class="panel">
                         <div class="panel-body">
-                            <h2>White Power</h2> 
+                            <h2>&nbsp;</h2> 
                             <span class="img-responsive center-block bookm bm-WP">&nbsp;</span><br> 
                             <div class="btn-1 center-block">
                                 <a class="btn-readmore button" style="center" target="popup" onclick="window.open('../../../../../../Import/DL/Books/White_Power_Rockwell.pdf','popup'); return false;"><span>Online/DL</span></a>
@@ -203,7 +203,7 @@
                 <section aria-label="WEA-DL"  class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
                     <div class="panel">
                         <div class="panel-body">
-                            <h2>Who We Are</h2>
+                            <h2>&nbsp;</h2>
                             <span class="img-responsive center-block bookm bookm bm-WEA">&nbsp;</span><br>
                             <div class="btn-1 center-block"> 
                                 <a class="btn-readmore button" style="center" target="popup" onclick="window.open('../../../../../../Import/DL/Books/Pierce_William_Luther-Who_We_Are.pdf','popup'); return false;"><span>Online/DL</span></a>
