Fixed Join Links

--- a/Frame/Layout/4_SideBars/Gab/gabSidebar.html
+++ b/Frame/Layout/4_SideBars/Gab/gabSidebar.html
@@ -70,7 +70,7 @@
                     <div class=" g_main g_margin_bot_15 g_margin_top_5 g_flew_row g_pad_lr_15 col-xl-6 col-lg-6 col-md-6 col-sm-6 g_align_center">
                         <div class="g_main _1XpDY-">
                             <div class="g_main g_mw">
-                                <a class="g_main g_cursor g_td_none g_bg_color_tparent g_outline_none g_flew_grow g_pad_r_15" title="Join Gab" aria-label="SignUp" target="popup" onclick="window.open('https://gab.com','popup','width=600,height=600'); return false;">
+                                <a class="g_main g_cursor g_td_none g_bg_color_tparent g_outline_none g_flew_grow g_pad_r_15" title="Join Gab" aria-label="SignUp" target="popup" onclick="window.open('https://gab.com/GreyingError','popup','width=600,height=600'); return false;">
 
                                 <span class="g_main g_setty g_green_text g_font_sizevar g_fontw_600 g_text_center">     Join Gab</span></a>
                             </div></div></div>
@@ -119,9 +119,12 @@
                     <div class=" g_main g_margin_bot_15 g_margin_top_5 g_flew_row  g_align_center">
                         <div class="g_main _1XpDY-">
                             <div class="g_main g_mw">
-                                <a class="g_main g_cursor g_td_none g_bg_color_tparent g_outline_none g_flew_grow" title="Join Git" aria-label="SignUp" target="popup" onclick="window.open('https://github.com/signup?ref_cta=Sign+up&amp;ref_loc=header+logged+out&amp;ref_page=%2F&amp;source=header-home','popup','width=600,height=600'); return false;">
+                                <a class="g_main g_cursor g_td_none g_bg_color_tparent g_outline_none g_flew_grow" title="Join Git" aria-label="SignUp" target="popup" onclick="window.open('https://www.minds.com/?referrer=greyingerror9','popup','width=600,height=600'); return false;">
 
                                 <span class="g_main g_setty g_green_text g_font_sizevar g_fontw_600 g_text_center">  Join MInds</span></a>
                             </div></div></div>
                 </div></div>
             </main></section>
+            <!--ThunderBird Images
+            window.localStorage.blockedby.split(",").length-->
+                    <style class="img-responsive center-block promo-item item-Sess"></style>
