--- a/Frame/Layout/4_SideBars/Gab/gabSidebar.html
+++ b/Frame/Layout/4_SideBars/Gab/gabSidebar.html
@@ -17,7 +17,7 @@
                         <img alt="GreyingError" class="g_main g_border_radius g_of_x g_main g_avi" src="https://media.gab.com/system/accounts/avatars/000/908/552/original/e0c8c62d21d771bd.png" width="62" height="62"></div>
                     <div class="g_main _g_ml_15 ">
                         <div class="g_main g_mw g_align_center">
-                            <span class="g_main g_flew_row g_mw g_fsh g_of_x g_primary_text"></span>
+                            <span class="g_main g_flew_row g_mw g_fsh g_of_x g_primary_text">&nbsp;</span>
                                 <bdi class="g_setty g_spacewrap ">
                                     <strong class="g_setty g_overflow_wrap  g_spacewrap g_fontw_600 g_primary_text g_margin_r_2 .g_line_h_1quart g_font_medium ">GreyingError</strong></bdi>
 
@@ -81,7 +81,7 @@
                         <div class="TechSecSW swt-TechSWGithubco" style="height: 42px; width: 42px;"></div></div>
                     <div class="g_main _g_ml_15 ">
                         <div class="g_main g_mw g_align_center">
-                            <span class="g_main g_flew_row g_mw g_fsh g_of_x g_primary_text"></span>
+                            <span class="g_main g_flew_row g_mw g_fsh g_of_x g_primary_text">&nbsp;</span>
                                 <bdi class="g_setty g_spacewrap ">
                                     <strong class="g_setty g_overflow_wrap  g_spacewrap g_fontw_600 g_primary_text g_margin_r_2 .g_line_h_1quart g_font_medium ">GitHub</strong></bdi>
 
@@ -100,14 +100,15 @@
                                 <span class="g_main g_setty g_green_text g_font_sizevar g_fontw_600 g_text_center">Join GitHub</span></a>
                             </div></div></div>
                 </div>
+
                 <div id="MindNAME" class="g_align_center">
                     <div class="g_main g_margin_top_32 g_border_radius g_border_color g_border_width_6 g_align_center">
                         <div class="TechSecSW swt-TechSWGithubco" style="height: 42px; width: 42px;"></div></div>
                     <div class="g_main _g_ml_15 ">
                         <div class="g_main g_mw g_align_center">
-                            <span class="g_main g_flew_row g_mw g_fsh g_of_x g_primary_text"></span>
+                            <span class="g_main g_flew_row g_mw g_fsh g_of_x g_primary_text">&nbsp;</span>
                                 <bdi class="g_setty g_spacewrap ">
-                                    <strong class="g_setty g_overflow_wrap  g_spacewrap g_fontw_600 g_primary_text g_margin_r_2 .g_line_h_1quart g_font_medium "> Minds</strong></bdi>
+                                    <strong class="g_setty g_overflow_wrap g_spacewrap g_fontw_600 g_primary_text g_margin_r_2 .g_line_h_1quart g_font_medium "> Minds</strong></bdi>
 
                                 <svg class="_33mR1 g_main" version="1.1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="15px" height="15px" viewBox="0 0 32 32" xml:space="preserve" role="img">
 
@@ -119,12 +120,9 @@
                     <div class=" g_main g_margin_bot_15 g_margin_top_5 g_flew_row  g_align_center">
                         <div class="g_main _1XpDY-">
                             <div class="g_main g_mw">
-                                <a class="g_main g_cursor g_td_none g_bg_color_tparent g_outline_none g_flew_grow" title="Join Git" aria-label="SignUp" target="popup" onclick="window.open('https://www.minds.com/?referrer=greyingerror9','popup','width=600,height=600'); return false;">
+                                <a class="g_main g_cursor g_td_none g_bg_color_tparent g_outline_none g_flew_grow" title="Join Minds" aria-label="SignUp" target="popup" onclick="window.open('https://www.minds.com/?referrer=greyingerror9','popup','width=600,height=600'); return false;">
 
                                 <span class="g_main g_setty g_green_text g_font_sizevar g_fontw_600 g_text_center">  Join MInds</span></a>
                             </div></div></div>
                 </div></div>
             </main></section>
-            <!--ThunderBird Images
-            window.localStorage.blockedby.split(",").length-->
-                    <style class="img-responsive center-block promo-item item-Sess"></style>
