--- a/Frame/Layout/4_SideBars/Gab/gabSidebar.html
+++ b/Frame/Layout/4_SideBars/Gab/gabSidebar.html
@@ -19,7 +19,7 @@
                         <div class="g_main g_mw g_align_center">
                             <span class="g_main g_flew_row g_mw g_fsh g_of_x g_primary_text">&nbsp;</span>
                                 <bdi class="g_setty g_spacewrap ">
-                                    <strong class="g_setty g_overflow_wrap  g_spacewrap g_fontw_600 g_primary_text g_margin_r_2 .g_line_h_1quart g_font_medium ">GreyingError</strong></bdi>
+                                    <strong class="g_setty g_overflow_wrap  g_spacewrap g_fontw_600 g_primary_text g_margin_r_2 .g_line_h_1quart g_font_medium g_text_center">GreyingError</strong></bdi>
 
                                 <svg class="_33mR1 g_main" version="1.1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="15px" height="15px" viewBox="0 0 32 32" xml:space="preserve" role="img">
 
@@ -70,9 +70,9 @@
                     <div class=" g_main g_margin_bot_15 g_margin_top_5 g_flew_row g_pad_lr_15 col-xl-6 col-lg-6 col-md-6 col-sm-6 g_align_center">
                         <div class="g_main _1XpDY-">
                             <div class="g_main g_mw">
-                                <a class="g_main g_cursor g_td_none g_bg_color_tparent g_outline_none g_flew_grow g_pad_r_15" title="Join Gab" aria-label="SignUp" target="popup" onclick="window.open('https://gab.com/GreyingError','popup','width=600,height=600'); return false;">
+                                <a class="g_main g_cursor g_td_none g_bg_color_tparent g_outline_none g_flew_grow" title="Join Gab" aria-label="SignUp" target="popup" onclick="window.open('https://gab.com/GreyingError','popup','width=600,height=600'); return false;">
 
-                                <span class="g_main g_setty g_green_text g_font_sizevar g_fontw_600 g_text_center">     Join Gab</span></a>
+                                <span class="g_main g_setty g_green_text g_font_sizevar g_fontw_600 g_text_center tc">Join Gab</span></a>
                             </div></div></div>
                 </div>
 
@@ -83,7 +83,7 @@
                         <div class="g_main g_mw g_align_center">
                             <span class="g_main g_flew_row g_mw g_fsh g_of_x g_primary_text">&nbsp;</span>
                                 <bdi class="g_setty g_spacewrap ">
-                                    <strong class="g_setty g_overflow_wrap  g_spacewrap g_fontw_600 g_primary_text g_margin_r_2 .g_line_h_1quart g_font_medium ">GitHub</strong></bdi>
+                                    <strong class="g_setty g_overflow_wrap  g_spacewrap g_fontw_600 g_primary_text g_margin_r_2 .g_line_h_1quart g_font_medium g_text_center tc">GitHub</strong></bdi>
 
                                 <svg class="_33mR1 g_main" version="1.1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="15px" height="15px" viewBox="0 0 32 32" xml:space="preserve" role="img">
 
@@ -97,7 +97,7 @@
                             <div class="g_main g_mw">
                                 <a class="g_main g_cursor g_td_none g_bg_color_tparent g_outline_none g_flew_grow" title="Join Git" aria-label="SignUp" target="popup" onclick="window.open('https://github.com/signup?ref_cta=Sign+up&amp;ref_loc=header+logged+out&amp;ref_page=%2F&amp;source=header-home','popup','width=600,height=600'); return false;">
 
-                                <span class="g_main g_setty g_green_text g_font_sizevar g_fontw_600 g_text_center">Join GitHub</span></a>
+                                <span class="g_main g_setty g_green_text g_font_sizevar g_fontw_600 g_text_center tc">Join GitHub</span></a>
                             </div></div></div>
                 </div>
 
@@ -108,7 +108,7 @@
                         <div class="g_main g_mw g_align_center">
                             <span class="g_main g_flew_row g_mw g_fsh g_of_x g_primary_text">&nbsp;</span>
                                 <bdi class="g_setty g_spacewrap ">
-                                    <strong class="g_setty g_overflow_wrap g_spacewrap g_fontw_600 g_primary_text g_margin_r_2 .g_line_h_1quart g_font_medium "> Minds</strong></bdi>
+                                    <strong class="g_setty g_overflow_wrap g_spacewrap g_fontw_600 g_primary_text g_margin_r_2 .g_line_h_1quart g_font_medium g_text_center tc">Minds</strong></bdi>
 
                                 <svg class="_33mR1 g_main" version="1.1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="15px" height="15px" viewBox="0 0 32 32" xml:space="preserve" role="img">
 
@@ -122,7 +122,7 @@
                             <div class="g_main g_mw">
                                 <a class="g_main g_cursor g_td_none g_bg_color_tparent g_outline_none g_flew_grow" title="Join Minds" aria-label="SignUp" target="popup" onclick="window.open('https://www.minds.com/?referrer=greyingerror9','popup','width=600,height=600'); return false;">
 
-                                <span class="g_main g_setty g_green_text g_font_sizevar g_fontw_600 g_text_center">  Join MInds</span></a>
+                                <span class="g_main g_setty g_green_text g_font_sizevar g_fontw_600 g_text_center tc">Join MInds</span></a>
                             </div></div></div>
                 </div></div>
             </main></section>
