Quick Oversight corrections

--- a/Frame/Layout/3_Content/arcademob.html
+++ b/Frame/Layout/3_Content/arcademob.html
@@ -4,7 +4,7 @@
         <div class="panel panel-default">
             <div class="panel-heading">
                 <h3 class="panel-title tc">
-                    <a class="accordion-toggle" data-toggle="collapse"data-parent="#accordion" href="#arcadez">Close Arcade Array</a></h3></div></div>
+                    <a class="accordion-toggle" data-toggle="collapse"data-parent="#accordion">Close Arcade Array</a></h3></div></div>
     <!--Arcade Terms Alert -->
         <section aria-label="ArcadeAlert" id="softwarealert">
             <div class="alert alert-warning alert-dismissible tc" role="alert">
@@ -455,7 +455,6 @@
                                         <div class="btn-1 center-block">
                                             <a style="center" target="_blank" onclick="window.open('https://mega.nz/folder/uWQxDZhS#paq8UYsypxEA68kXfHA0Pw','popup','_blank'); return false;"><span>Download Pc</span></a></div>
                                         </div></div></section>
-
                         </div></section></div></div></div>
 
     <!-- N64 Games Jump-->
@@ -470,7 +469,7 @@
                 <section aria-label="n64Alert" id="n64alert">
                     <div class="alert alert-warning alert-dismissible tc" role="alert">
                         <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true"></span><span class="sr-only">Close</span></button>
-                            <p>Top 16 Personnal Favorites</p></div></section><br>
+                            <p>Top 16 Personnal Favorites<br> Can be tricky setup.</p></div></section><br>
                 <!--Main -->
                 <div class="content panel-body">
                     <div class="content-inner">
