--- a/Frame/Layout/3_Content/arcademob.html
+++ b/Frame/Layout/3_Content/arcademob.html
@@ -4,7 +4,7 @@
         <div class="panel panel-default">
             <div class="panel-heading">
                 <h3 class="panel-title tc">
-                    <a class="accordion-toggle" data-toggle="collapse"data-parent="#accordion">Close Arcade Array</a></h3></div></div>
+                    <a class="accordion-toggle" data-toggle="collapse"data-parent="#accordion">Arcade Array</a></h3></div></div>
     <!--Arcade Terms Alert -->
         <section aria-label="ArcadeAlert" id="softwarealert">
             <div class="alert alert-warning alert-dismissible tc" role="alert">
