Remove Close Option

--- a/Frame/Layout/3_Content/videomob.html
+++ b/Frame/Layout/3_Content/videomob.html
@@ -4,7 +4,7 @@
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <h3 class="panel-title tc">
-                        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#vidz">Close Video Mobile</a></h3></div></div>
+                        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion">Video Array</a></h3></div></div>
         <!--Terms Alert -->
             <section aria-label="BookAlert" id="softwarealert">
                 <div class="alert alert-warning alert-dismissible tc" role="alert">
