--- a/Frame/Layout/1_Navigation/mainfoot.html
+++ b/Frame/Layout/1_Navigation/mainfoot.html
@@ -11,5 +11,5 @@
     <!-- Copyright etc -->
     <div class="small-print">
         <div class="container">
-            <p class="muted"><small>Copyright &copy; NineNeins.com 2015-2024</small></p></div></div>
+            <p class="muted"><small>NineNeins 2024</small></p></div></div>
 </footer>
