--- a/Frame/Layout/6_ReadMore/homeinfowrap.html
+++ b/Frame/Layout/6_ReadMore/homeinfowrap.html
@@ -18,4 +18,7 @@
                             <div class="btn-1 center-block">
                                 <a style="center" href="blog"><span>Check Blog</span></a></div>
                         </div></div></section></div>
-        </section></div>
+        </section></div></section></div>
+
+            <div class="panel-footy blog-content col-MainX col-lg-MainL col-MainM col-sm-MainS">
+                <p class="section-heading text-muted">"For the vision is yet for an appointed time, <u>but at the end it shall speak, and not lie: though it tarry, wait for it; because it will surely come, it will not tarry.</u>"</p></div>
