--- a/Frame/CSS/Core/NeinPro.css
+++ b/Frame/CSS/Core/NeinPro.css
@@ -23,10 +23,6 @@ body {
     margin: 0;
     width: 100%;
 }
-/*body {
-  background-color: #fff;
-}
-*/
 
 @font-face {
   font-family: 'helveticaneue-roman';
@@ -682,13 +678,15 @@ pre code {
 .container-fluid {
   margin-left: auto;
   margin-right: auto;
-  padding-left: 5px;
-  padding-right: 3px;
 }
+/*
+  padding-left: 3px;
+  padding-right: 2px;
+*/
 .navcontainer-fluid {
   margin-left: auto;
   margin-right: auto;
-  padding-left: 5px;
+  padding-left: 3px;
   padding-right: 3px;
 }
 .row {margin-left: -15px; margin-right: -15px;}
@@ -2868,7 +2866,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 .navbar-fixed-top,
 .navbar-fixed-bottom {
-  left: 6px;
+  left: 4px;
   position: fixed;
   right: 4px;
   z-index: 1030;
