--- a/Frame/Layout/6_ReadMore/bloginfowrap.html
+++ b/Frame/Layout/6_ReadMore/bloginfowrap.html
@@ -7,3 +7,7 @@
                 <h2 class="icon9add icon9-info-sign text-primary" style="font-size: 40px"></h2>
                 <h4>The Blogs</h4></hgroup> 
             <p class="text-muted">A Pro-White adventure that stimulates the pursuit of knowledge, comprehension, and learning through the power and creativity of innovating developments.</p></div></section></div> 
+
+            <div class="panel-footy blog-content col-MainX col-lg-MainL col-MainM col-sm-MainS">
+                <p class="section-heading text-muted">"Write and dont worry
+                    <u>the ones who like it are quiet and listening.</u>"</p></div>
