Changed Crypto header

--- a/Frame/Layout/3_Content/greyingmob.html
+++ b/Frame/Layout/3_Content/greyingmob.html
@@ -56,7 +56,7 @@
                         <hgroup>
                             <h2>Crypto/Useage</h2> 
                             <h5>Why, How, Useage</h5></hgroup>
-                            <span class="img-responsive center-block InspireB IB-HardH">&nbsp;</span><br>
+                            <span class="img-responsive center-block InspireB IB-CryptoH">&nbsp;</span><br>
                             <p>Everything Crypto, Why, and Reasoning.</p>
                             <div class="btn-1 center-block">
                                 <a style="center" target="_blank" onclick="window.open('Tech/CryptoTalk','popup','_blank'); return false;"><span>Read</span></a></div> 
