--- a/Frame/Layout/3_Content/homemobdes.html
+++ b/Frame/Layout/3_Content/homemobdes.html
@@ -1,4 +1,5 @@
 <!--Home Top -->
+    <div class="panel-body">
     <section class="content">
         <div class="container">
             <div class="row">
@@ -40,21 +41,44 @@
                             </div></div></div>
                         </div></div></div></section>
 <!--FashShop -->
-    <div class="panel-body">
-    <section class="content content-2">
+    <section class="content-2 rcorner panel-default">
         <div class="container">
             <div class="row">
-                <section class="col-xl-6 col-lg-6 col-md-6 col-sm-6">
-                    <h2 class="section-header">Fash Out</h2>
+                <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6">
+                    <h2 id="shop-md" class="section-header">Fash Out</h2>
                     <p class="lead text-light">Shop for gear, items, clothing, and upgrades from 9-Neins, show love, and help our development flourish.</p>
+                    <p class="tc">
                     <section aria-label="Deals" class="col-xl-4 col-lg-4 col-md-4 col-sm-4">
-                        <div class="btn-1 center-block">
-                            <a style="center" target="popup" onclick="window.open('','popup','_blank'); return false;"><span>New</span></a></div></section>
+                        <div class="panel-blog">
+                            <div class="panel-body-blog">
+                                <div class="btn-2 center-block">
+                                    <a style="center" target="popup" onclick="window.open('','popup','_blank'); return false;"><span>New</span></a></div> 
+                            </div></div></section>
                     <section aria-label="PowerLevel" class="col-xl-4 col-lg-4 col-md-4 col-sm-4">
-                        <div class="btn-1 center-block">
-                            <a style="center" target="popup" onclick="window.open('','popup','_blank'); return false;"><span>Swazis</span></a></div></section>
+                        <div class="panel-blog">
+                            <div class="panel-body-blog">
+                                <div class="btn-2 center-block">
+                                    <a style="center" target="popup" onclick="window.open('','popup','_blank'); return false;"><span>Swazis</span></a></div> 
+                            </div></div></section>
                     <section aria-label="Merch" class="col-xl-4 col-lg-4 col-md-4 col-sm-4">
-                        <div class="btn-1 center-block">
-                            <a style="center" target="popup" onclick="window.open('','popup','_blank'); return false;"><span>Merch</span></a></div></section></section>  
-                <section class="col-xl-6 col-lg-6 col-md-6 col-sm-6">
-                    <span class="img-responsive img-circle center-block shopm sm-Shopd">&nbsp;</span></section></div></div></section></div>
+                        <div class="panel-blog">
+                            <div class="panel-body-blog">
+                                <div class="btn-2 center-block">
+                                    <a style="center" target="popup" onclick="window.open('','popup','_blank'); return false;"><span>Merch</span></a></div> 
+                            </div></div></section>
+
+                    <p class="lead text-light tc">Microclient will be compatible<wbr> with WIN-7+.</p> 
+                        <div class="panel-heading">
+                            <div class="btn-2 center-block">
+                                <h3 class="panel-title tc">
+                                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#MobileInfo"><span>Shop - More</span></a></h3></div></div>
+                        <div id="MobileInfo" class="panel-collapse collapse">
+                            <div class="panel-body-blog">
+                                <div class="content-inner">
+                                <p class="lead text-light"><br><br>
+                                Raise your Power-Level.<br><br>
+                                Weekly deals, Power packs, and Merch. Go further and support our guys across the spectrum.</p> 
+                            </div></div></div></div>
+                <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6">
+                    <span class="img-responsive img-circle center-block shopm sm-Shopd">&nbsp;</span></div>
+                        </div></div></section></div>
