--- a/Frame/Layout/3_Content/homemobdes.html
+++ b/Frame/Layout/3_Content/homemobdes.html
@@ -71,8 +71,8 @@
                         <div class="panel-heading">
                             <div class="btn-2 center-block">
                                 <h3 class="panel-title tc">
-                                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#MobileInfo"><span>Shop - More</span></a></h3></div></div>
-                        <div id="MobileInfo" class="panel-collapse collapse">
+                                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#ShopInfo"><span>Shop - More</span></a></h3></div></div>
+                        <div id="ShopInfo" class="panel-collapse collapse">
                             <div class="panel-body-blog">
                                 <div class="content-inner">
                                 <p class="lead text-light"><br><br>
