--- a/Frame/Layout/3_Content/homemobdes.html
+++ b/Frame/Layout/3_Content/homemobdes.html
@@ -67,7 +67,7 @@
                                     <a style="center" target="popup" onclick="window.open('','popup','_blank'); return false;"><span>Merch</span></a></div> 
                             </div></div></section>
 
-                    <p class="lead text-light tc">Microclient will be compatible<wbr> with WIN-7+.</p> 
+                    <p class="lead text-light tc">Crypto and Sponsors</p> 
                         <div class="panel-heading">
                             <div class="btn-2 center-block">
                                 <h3 class="panel-title tc">
