Removed Corner sponsor

--- a/Frame/Layout/5_FeatSpon/mainspon.html
+++ b/Frame/Layout/5_FeatSpon/mainspon.html
@@ -1,4 +1,4 @@
-<section class="comment-content panel-default panel-body">
+<section class="panel-default panel-body">
     <div class="container-fluid">
         <p class="tc">Support us - Secure Mail - Secure Browser - Secure Vpn</p>
         <div class="promo">
