--- a/Frame/CSS/MainPage.css
+++ b/Frame/CSS/MainPage.css
@@ -1495,3 +1495,22 @@ img::-moz-selection {
         margin: 1cm;
     }
     }
+
+    .dropdown-submenu > .dropdown-menu{
+    position: relative;
+    left: 0;
+    top: 0;
+    margin: 0;
+}
+
+.dropdown-submenu:hover > .dropdown-menu{
+    display: none;
+}
+
+.shown{
+    display: block;
+}
+
+.dropdown-submenu:hover > .shown{
+    display: block;
+}
