--- a/Frame/Layout/3_Content/blogmob.html
+++ b/Frame/Layout/3_Content/blogmob.html
@@ -13,7 +13,7 @@
                             <h2>NineNeins</h2>
                             <p>For information on developments, projects in progress, and upcoming events in development.</p><br>
                             <div class="btn-1 center-block">
-                                <a style="center" href="https://www.NineNeins.com/B-Topic/GreyingErrorBlog.html"><span>Read</span></a></div>
+                                <a style="center" href="B-Topic/GreyingErrorBlog"><span>Read</span></a></div>
                         </div></div></section>
                 <section aria-label="GEBlog" class="col-xl-4 col-lg-4 col-md-4 col-sm-4">
                     <div class="panel">
@@ -29,7 +29,7 @@
                             <h2>FAQ</h2>
                             <p>If you have any queries about development, content, cryptocurrency, or problems, start here.</p><br>
                             <div class="btn-1 center-block">
-                                <a style="center" href="https://www.NineNeins.com/B-Topic/FaqBlog.html"><span>Read</span></a></div>
+                                <a style="center" href="B-Topic/FaqBlog"><span>Read</span></a></div>
                         </div></div></section>
                     </div></section></div></div>
                 </div></section>
